--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   tflite_flutter: ^0.9.0
   tflite_flutter_helper: ^0.3.1
   image_picker: ^0.8.4+5
+  percent_indicator: ^4.0.0
 
 dev_dependencies:
   flutter_test:
